--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@types/react-router-dom": "^5.1.5",
     "axios": "^0.19.2",
     "react": "^16.13.1",
+    "react-autosize-textarea": "^7.0.0",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
