--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.8",
     "@types/react-router-dom": "^5.1.5",
+    "@types/uuid": "^8.0.0",
     "axios": "^0.19.2",
     "react": "^16.13.1",
     "react-autosize-textarea": "^7.0.0",
@@ -25,7 +26,8 @@
     "react-youtube": "^7.11.2",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "typescript": "^3.7.5"
+    "typescript": "^3.7.5",
+    "uuid": "^8.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
