--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
+    "postinstall": "npm run build",
     "build": "tsc -p ."
   },
   "author": "",
