--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/passport": "^1.0.3",
-    "bcrypt": "^4.0.1",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
