--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "client": "cd client && npm start",
     "server": "cd server && npm run dev",
     "dev": "concurrently \"npm run client\" \"npm run server\"",
-    "start": "cd server && npm install && npm run build && npm run start",
+    "start": "cd server && npm install && npm run postinstall && npm run start",
     "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "repository": {
