--- a/server/package.json
+++ b/server/package.json
@@ -24,11 +24,11 @@
     "path": "^0.12.7",
     "pg": "^8.2.1",
     "socket.io": "^2.3.0",
-    "ts-node": "^8.10.1"
+    "ts-node": "^8.10.1",
+    "typescript": "^3.9.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.6",
-    "@types/node": "^14.0.5",
-    "typescript": "^3.9.2"
+    "@types/node": "^14.0.5"
   }
 }
